<resources>
    <string name="app_name">Singularity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hiworld">hi world</string>
    <string name="skip">>>跳过</string>
    <string name="setting">设置</string>
    <string name="more">更多</string>
    <string name="accept_notify">接受通知</string>
    <string name="reject">拒绝</string>
    <string name="accept">接受</string>
    <string name="copyright">\@奇点科技 singularity.com</string>
    <string name="no_network">当前网络未连接！</string>
    <string name="new_msgs">您有新的消息</string>
    <string name="relogin">请重新登录</string>
    <string name="request_permission_title">缺少权限</string>
    <string name="request_permission_message">本应用缺少必要权限，请先授予允许权限！</string>
    <string name="setting_permission">设置权限</string>
    <string name="setting_permission_to_appsetting"><![CDATA[应用缺少必要权限，请前往“设置->应用管理->权限”授予允许权限]]></string>
    <string name="goto_setting">去设置</string>
    <string name="err_get_img">获取图片失败</string>
    <string name="check_update">检查更新</string>
    <string name="clear_cache">清除缓存</string>
    <string name="suggest">意见反馈</string>
    <string name="aboutus">关于我们</string>
</resources>
